--- a/FINAL_CONTAINERS/.vscode/settings.json
+++ b/FINAL_CONTAINERS/.vscode/settings.json
@@ -65,6 +65,8 @@
     "type_traits": "cpp",
     "typeinfo": "cpp",
     "utility": "cpp",
-    "iomanip": "cpp"
+    "iomanip": "cpp",
+    "list": "cpp",
+    "queue": "cpp"
   }
 }
